Minor adjustments, fix quote icon position, universal icon sized for unit-page

--- a/src/app/relic-page/relic-page.component.html
+++ b/src/app/relic-page/relic-page.component.html
@@ -1,9 +1,8 @@
 <section class="main" *ngIf="relic">
   <div class="header-element">
-
     <div class="header-content">
       <div class="unit-wrapper">
-        <div class="unit-avatar" style="background-image: url(&quot;../assets/other/relic_frame.png&quot;);" >
+        <div class="unit-avatar" style="background-image: url(&quot;../assets/other/relic_frame.png&quot;);">
           <img src="assets/relics/{{relic?.slug}}_relic.png" alt="Relic">
         </div>
         <div class="unit-name-element">
@@ -13,16 +12,12 @@
           <div class="unit-weapon-name">
             <span>{{relic?.tag}}</span>
           </div>
-
         </div>
       </div>
-
       <div class="unit-description">
         <div *ngFor="let item of relic?.description">
-
           <p>{{ item.paragraph }}</p>
         </div>
-
       </div>
 <!--       <div class="unit-roles">
         <div class="stats-title">Roles</div>
@@ -34,8 +29,7 @@
         </div>
       </div> -->
     </div>
-    <div class="header-splash"
-      style="background-image: url(&quot;../assets/backgrounds/relic_page_background.png&quot;);">
+    <div class="header-splash" style="background-image: url(&quot;../assets/backgrounds/relic_page_background.png&quot;);">
 
     </div>
   </div>
@@ -55,7 +49,6 @@
       </div>
     </div>
     <div class="profile-part">
-
       <div class="advancements-table">
         <div class="advancements-table-row">
           <div class="advancements-star-column">
@@ -107,11 +100,7 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
-
-
-
   </div>
 </section>
