--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -56,11 +56,13 @@
 
                 .unit-avatar img {
                     width: 100px;
+                    // border: 2px solid $border;
+                    // border-radius: 50%;
                 }
 
                 .unit-name-element {
                     display: flex;
-                    //justify-content: center;                  
+                    // justify-content: center;                  
                     flex-direction: column;
 
                     .unit-name {
@@ -139,7 +141,6 @@
         padding: 20px 20px;
         background-color: rgba(41, 41, 42, 0.9);
      
-
         .tabs {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -274,6 +275,11 @@
                 align-items: center;
                 gap: 20px;
                 margin-bottom: 20px;
+
+                img {
+                    width: 100px;
+                    height: 100px;
+                }
             }
 
             .attack-name {
