--- a/src/app/about-us-card/about-us-card.component.scss
+++ b/src/app/about-us-card/about-us-card.component.scss
@@ -85,6 +85,8 @@
     .opaque-background {
         // background: green;
         background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         position: absolute;
         top: 0;
         left: 0;
