Add Glossay visual block on the Home page, minor responsive tinkering

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -208,7 +208,23 @@
     </div>
     <div class="half visual">
       <div class="wrapper" id="glossary">
-
+        <div class="terms-block">
+          <div class="term-container">
+            <h5 class="title">Hyperbody</h5>
+            <span class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+          </div>
+          <div class="term-container">
+            <h5 class="title">Graybite</h5>
+            <span class="description">Curabitur ut tortor eget felis maximus ullamcorper.</span>
+          </div>
+          <div class="term-container">
+            <h5 class="title">Delay</h5>
+            <span class="description">Sed ex cupiditate non, doloremque dolorum natus porro saepe.</span>
+          </div>
+        </div>
+        <div class="buttons-block">
+          <a routerLink="/glossary" class="black-white-medium">Glossary</a>
+        </div>
       </div>
     </div>
   </div>
