--- a/src/app/matrices-index/matrices-index.component.scss
+++ b/src/app/matrices-index/matrices-index.component.scss
@@ -113,5 +113,31 @@
         text-align: center;
         font-size: 36px;
         font-weight: 600;
+        margin: unset;
+    }
+}
+
+@media only screen and (max-width: $laptop) { // Card flip animation begins to look clip out of the borders
+    .matrices-index {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media only screen and (max-width: $tablet) {
+    .matrices-index {
+        grid-template-columns: repeat(3, 1fr);
+        // gap: 20px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .matrices-index {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (max-width: $mobile) {
+    .matrices-index {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
