--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -323,6 +323,41 @@
                     gap: 10px;
                 }
             }
+
+            .wrapper#glossary {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+
+                .terms-block {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 24px;
+
+                    .term-container {
+                        max-width: 450px;
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        gap: 24px;
+
+                        .title {
+                            font-size: 24px;
+                            color: $link;
+                            margin: unset;
+                            text-align: center;
+                        }
+
+                        .description {
+                            width: 100%;
+                            font-family: "Flow Circular", system-ui;
+                            font-weight: 400;
+                            font-style: normal;
+                        }
+                    }
+                }
+            }
         }
     }
 
@@ -359,3 +394,9 @@
         }
     }
 }
+
+// .flowc {
+//     font-family: 'Flow Circular', system-ui;
+//     font-weight: 400;
+//     font-style: normal;
+// }
