--- a/src/app/relic-page/relic-page.component.html
+++ b/src/app/relic-page/relic-page.component.html
@@ -16,7 +16,7 @@
       </div>
       <div class="unit-description">
         <div *ngFor="let item of relic?.description">
-          <p>{{ item.paragraph }}</p>
+          <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
         </div>
       </div>
 <!--       <div class="unit-roles">
@@ -56,7 +56,7 @@
           </div>
           <div class="advancements-text-column">
             <div *ngFor="let item of relic?.oneStar">
-              <p>{{ item.paragraph }}</p>
+              <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
           </div>
           <div class="advancements-text-column">
             <div *ngFor="let item of relic?.twoStar">
-              <p>{{ item.paragraph }}</p>
+              <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="advancements-text-column">
             <div *ngFor="let item of relic?.threeStar">
-              <p>{{ item.paragraph }}</p>
+              <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="advancements-text-column">
             <div *ngFor="let item of relic?.fourStar">
-              <p>{{ item.paragraph }}</p>
+              <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
           </div>
           <div class="advancements-text-column">
             <div *ngFor="let item of relic?.fiveStar">
-              <p>{{ item.paragraph }}</p>
+              <p [innerHTML]="sanitizeHtml(item.paragraph)"></p>
             </div>
           </div>
         </div>
