Image format optimizations

--- a/src/app/guides/guides.component.html
+++ b/src/app/guides/guides.component.html
@@ -6,7 +6,7 @@
     <div class="entries">
       <div class="entry">
         <div class="card">
-        <img class="card-img-top" src="assets/backgrounds/placeholder_background.png" alt="Card image top">
+        <img class="card-img-top" src="assets/backgrounds/placeholder_background.webp" alt="Card image top">
           <div class="card-body">
             <h5 class="card-title">Void Abyss</h5>
             <p class="card-text">In Void Abyss, The Wanderer must collect 3 keys in order challenge a powerful boss. Collectible buffs can be found and strategically transferred to party members to ensure a more successful boss fight.</p>
