--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,19 +13,19 @@
 <section class="banner">
   <splide [options]="{type: 'loop', perPage: 1, autoplay: true, interval: 5000}" containerClass="splide-fix">
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.webp"/>
     </splide-slide>
     <splide-slide>
-      <img src="assets/backgrounds/banner_background.jpg"/>
+      <img src="assets/backgrounds/banner_background.webp"/>
     </splide-slide>
   </splide>
   <div class="content-container">
