--- a/src/app/relic-page/relic-page.component.html
+++ b/src/app/relic-page/relic-page.component.html
@@ -29,7 +29,7 @@
         </div>
       </div> -->
     </div>
-    <div class="header-splash" style="background-image: url(&quot;../assets/backgrounds/relic_page_background.png&quot;);">
+    <div class="header-splash" style="background-image: url(&quot;../assets/backgrounds/relic_page_background.webp&quot;);">
 
     </div>
   </div>
