--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -75,7 +75,7 @@
                     align-items: flex-end;
                     justify-content: center;
                     border-radius: 5px;
-                    background-image: url("../../assets/backgrounds/placeholder_background.png");
+                    background-image: url("../../assets/backgrounds/placeholder_background.webp");
                     background-position: center;
                     background-size: cover;
                     transition: 0.25s ease;
