Give About Us cards their background images back

--- a/src/app/about-us-card/about-us-card.component.html
+++ b/src/app/about-us-card/about-us-card.component.html
@@ -30,5 +30,5 @@
       <img src="assets/socials/{{link.icon}}.svg" [alt]="link.alt" class="icon">
     </a>
   </div>
-  <div class="opaque-background" style="background-image: url(assets/cards/{{card.favourite}}.png);"></div>
+  <div class="opaque-background" style="background-image: url(assets/cards/{{card.favourite}}.webp);"></div>
 </div>
